mvn compiler plugin added